src/objects/Product__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This Product Article type will capture all existing products details of SPH.</description>
    <fields>
        <fullName>File_Attachment__c</fullName>
        <label>File Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IF( Today()&lt;= Valid_Until__c  , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;))</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Details__c</fullName>
        <label>Product Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Valid_Until__c</fullName>
        <label>Valid Until</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
</CustomObject>